added CV Download Functionality

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -69,7 +69,7 @@
                                    class="nav-link montserrat_text text-primary link-hover">GitHub</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link montserrat_text text-primary link-hover">CV</a>
+                                <a href="{{ url_for('download_cv') }}" class="nav-link montserrat_text text-primary link-hover">CV</a>
                             </li>
                         </ul>
                     </div>
