updated homepage images

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,9 +9,9 @@
                 <div class="d-flex flex-column justify-content-between py-4 pr-4 my-4 mr-2 h-100">
                     <div class="content-section">
                         <div>
-                            <img src="/static/images/Screenshot%202024-10-15%20at%2019.17.33.png"
+                            <img src="/static/images/PDFfinalheadshot.jpg"
                                  class="rounded-circle img-fluid my-4 mx-auto d-block"
-                                 style="max-width: 70%; height: auto;">
+                                 style="max-width: 70%; height: auto; aspect-ratio: 1/1; object-fit: cover;">
                         </div>
                         <h3 class="mb-4 px-4 pt-0 text-center fw-bold text_shadow left_text_col montserrat_text">
                             Mr Nathanael Bashford
@@ -216,7 +216,7 @@
                          <div class="col-xl-4 col-lg-8 col-10 mx-auto text-center pb-3 px-2">
                             <a href="https://github.com/nbashford/Case-Study---Covid-19-Forecasting-with-Reddit-data-"
                                target="_blank" class="image-hover-project ">
-                                <img src="/static//images/covid_forecast_pic.png"
+                                <img src="/static//images/covid_forecast_pic.jpg"
                                      style="border-radius: 5%; max-width: 100%; height: auto;">
                             </a>
                          </div>
@@ -250,7 +250,7 @@
                         <div class="col-xl-6 col-12 d-flex text-start align-items-center justify-content-center">
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/SpaceMissionDatasetAnalysis" target="_blank">
-                                    <img src="/static//images/space_walk.png" class="project_img image-hover-project"
+                                    <img src="/static//images/spacewalk.jpg" class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
                             </div>
@@ -269,7 +269,7 @@
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/Police-Shootings-and-Census-Data-Exploration"
                                    target="_blank">
-                                    <img src="/static//images/police_light.png" class="project_img image-hover-project"
+                                    <img src="/static//images/police_light.jpg" class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
                             </div>
@@ -298,7 +298,7 @@
                         <div class="col-xl-6 col-12 d-flex text-start align-items-center justify-content-center">
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/PDFtoSpeech" target="_blank">
-                                    <img src="/static//images/microphone.png" class="project_img image-hover-project"
+                                    <img src="/static//images/microphone.jpg" class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
                             </div>
@@ -316,7 +316,7 @@
                         <div class="col-xl-6 col-12 d-flex text-start align-items-center justify-content-center">
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/Watermark" target="_blank">
-                                    <img src="/static//images/camera_4.png" class="project_img image-hover-project"
+                                    <img src="/static//images/camera_4.jpg" class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
                             </div>
@@ -345,7 +345,7 @@
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/BestUkCafesWebsite" target="_blank"
                                    style="width: 50%;">
-                                    <img src="/static//images/making_coffee.png"
+                                    <img src="/static//images/making_coffee.jpg"
                                          class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
@@ -367,7 +367,7 @@
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/ColourFromPicture" target="_blank"
                                    style="width: 50%;">
-                                    <img src="/static//images/palette.png" class="project_img image-hover-project"
+                                    <img src="/static//images/palette.jpg" class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
                             </div>
@@ -398,7 +398,7 @@
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/SpaceMissionDataset" target="_blank"
                                    style="width: 50%;">
-                                    <img src="/static//images/space_data_2.png"
+                                    <img src="/static//images/space_data_2.jpg"
                                          class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
@@ -418,7 +418,7 @@
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/CafeDataScraping" target="_blank"
                                    style="width: 50%;">
-                                    <img src="/static//images/cafe_data.png" class="project_img image-hover-project"
+                                    <img src="/static//images/cafe_data.jpg" class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
                             </div>
@@ -446,7 +446,7 @@
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/Breakout-Game" target="_blank"
                                    style="width: 50%;">
-                                    <img src="/static//images/bricks.png" class="project_img image-hover-project"
+                                    <img src="/static//images/bricks.jpg" class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
                             </div>
@@ -465,7 +465,7 @@
                             <div class="col-6 text-center pb-4 pb-xl-0">
                                 <a href="https://github.com/nbashford/SpaceInvaders" target="_blank"
                                    style="width: 50%;">
-                                    <img src="/static//images/highscore_3.png"
+                                    <img src="/static//images/highscore_3.jpg"
                                          class="project_img image-hover-project"
                                          style="border-radius: 5%; max-width: 100%; height: auto;">
                                 </a>
