--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,7 @@
     <div class="row w-100">
 
         <!--Left Image-->
-        <div class="col-sm-4 col-12 vh-100 d-flex flex-column" id="left-image" style="background-color: rgba(0, 0, 0, 0.5);">
+        <div class="col-md-4 col-12 vh-100 d-flex flex-column" id="left-image" style="background-color: rgba(0, 0, 0, 0.5);">
                 <div class="d-flex flex-column justify-content-between py-4 pr-4 my-4 mr-2 h-100">
                     <div class="content-section">
                         <div>
@@ -45,7 +45,7 @@
         </div>
 
         <!-- Right content -->
-        <div class="col-sm-8" id="right-content">
+        <div class="col-md-8" id="right-content">
             <!-- Navbar -->
             <nav class="navbar navbar-expand-md navbar-light">
                 <div class="container py-3 mb-4 offset-5">
