--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nathanael's Portfolio</title>
     {% block styling %}
     {{ bootstrap.load_css() }}
     {% endblock %}
@@ -10,6 +10,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="Nathanael's Portfolio">
+    <meta property="og:description" content="Showcasing my work in pharmacy, data science, and software development.">
+    <meta property="og:image" content="{{ url_for('static', filename='images/computerStephoscope.jpg', _external=True) }}">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ request.url }}">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Nathanael's Portfolio">
+    <meta name="twitter:description" content="Showcasing my work in pharmacy, data science, and software development.">
+    <meta name="twitter:image" content="{{ url_for('static', filename='images/computerStephoscope.jpg', _external=True) }}">
 </head>
 <body>
     {% block body %}
